--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,5 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732618.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1669883749-320x200.jpg"><p align="center">【疫情2.4】英部长：全球有四千种变种病毒</p></a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732668.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/02/1-11-320x200.jpg"><p align="center">亚利桑那亦提告 要求撤销移民遣返冻结令</p></a>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732668.md#1" title="亚利桑那亦提告 要求撤销移民遣返冻结令""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/1-11-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732618.md#1" title="【疫情2.4】英部长：全球有四千种变种病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1669883749-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12731729.md#1" title="隐瞒加入千人计划 美前华裔教授被控罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/12/100813150845228-600x400-1-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730799.md#1" title="【独家】核酸检测敷衍 中共多地抗疫现破绽""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230608692-600x400-320x200.jpg">&nbsp;</a>
@@ -11,14 +12,13 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731127.md#1" title="【图解】拜登上任首周 用行政令治国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/65a61b54ca941465a863d25314d1f62b-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731176.md#1" title="美议员提决议案 促2022年冬奥会迁出中国""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/000_1Q66KF-1-e1602298358865.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728367.md#1" title="21年苦难 青海法轮功学员见证中共暴行""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/2015-7-16-minghui-dc-rally-02-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730787.md#1" title="【新闻大家谈】太阳风案曝中共黑手 杨洁篪遇冷""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/ad003e43d1310589c27f68af9e8b033c-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yrsmsb310.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732497.md#1">逾3300只个股下跌  A股三大股指齐跌</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732687.md#1">百年机遇 蔡英文：打造更多台积电般护国神山</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732618.md#1">【疫情2.4】英部长：全球有四千种变种病毒</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732370.md#1">受贿三千万 内蒙巴彦淖尔前副市长武银星受审</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732582.md#1">京警以核酸检测当诱饵 访民杨浩被刑拘</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732536.md#1">组图：港府突袭封区 屯门等三区居民强制受检</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732592.md#1">如何迅速为汽车挡风玻璃除雾？</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732668.md#1">亚利桑那亦提告 要求撤销移民遣返冻结令</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732652.md#1">沈阳延迟公布染疫者死讯 儿子公开信为母叫屈</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732497.md#1">逾3300只个股下跌  A股三大股指齐跌</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732687.md#1">百年机遇 蔡英文：打造更多台积电般护国神山</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732618.md#1">【疫情2.4】英部长：全球有四千种变种病毒</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728478.md#1">中共官媒群批“厕所革命”打了谁的脸？</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729243.md#1">杨洁篪喊话吁双方尽快接触 美国务院回应</a><br>
@@ -55,6 +55,7 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731335.md#1">港姐李珊珊曾被嘲肥婆 获郑秀文帮助摆脱惊恐症</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731188.md#1">林依晨聚餐提前离席 雷佳音得知背后原因惊呆</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731155.md#1">武汉法轮功学员方细荣与幼童一并被绑架</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730787.md#1">【新闻大家谈】太阳风案曝中共黑手 杨洁篪遇冷</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730640.md#1">【微视频】缅甸军方疑选举作弊 逮捕昂山素季</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730460.md#1">报告：中国月收入超5千的网民不足三成</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728825.md#1">中共是跨国犯罪组织 美前高官：望拜登认定</a><br>
@@ -95,16 +96,15 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/31/n12724084.md#1">法轮功学员李景霞含冤离世 曾遭警察烧耳朵</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/31/n12724329.md#1">疫情期间团购被骗 台亲共艺人踢爆大陆假食品</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/31/n12724141.md#1">【役情最前线】习再忧“黑天鹅”和“灰犀牛”</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/31/n12724209.md#1">李英爱迎来50岁生日 保养六法维持冻龄美貌</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://219.85.105.240/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 52,527</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.233.135.108/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 52,527</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 372,226,855 人
+!共 372,226,915 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732582.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/6a24e36ed3dc0e15b039bfd99c384592-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732582.md#1">京警以核酸检测当诱饵 访民杨浩被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732307.md#1">澳外长促中共允许联合国调查新疆人权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731556.md#1">据报新疆拘禁营女性遭性侵 美政府深感不安</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12728987.md#1">前情报官：中共或已窃取80%美国成年人个资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730986.md#1">武汉蝙蝠T恤再刺激中共神经 网友：哪里有卖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730318.md#1">河北律师卢廷阁举报石家庄市律协侮辱诽谤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732497.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1052438186-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732497.md#1">逾3300只个股下跌  A股三大股指齐跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732220.md#1">传蚂蚁集团就公司整改和中共当局达成协议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731569.md#1">被美调查 苹果代工厂立讯精密高管减持71亿元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731419.md#1">中国科技股市值蒸发超3千亿 多只龙头股暴跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731301.md#1">大陆影视业2020业绩惨淡 万达预亏逾60亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730925.md#1">中共推迟公布2020年出生人口数据 引关注</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732370.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/3314-4-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732370.md#1">受贿三千万 内蒙巴彦淖尔前副市长武银星受审</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732460.md#1">外媒点名台湾拒用中共疫苗 陈时中：内容实在</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732093.md#1">拜登周四将发表讲话 为美外交政策定调</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12731876.md#1">台湾在南美设办公室 美助卿：助区域安全繁荣</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731372.md#1">分析：拜登对华核心团队 左右手意见不统一</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731358.md#1">腐败猖獗 中共多部门联合发“十个严禁”</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12731760.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12731760.md#1">南昌安义县小区封闭管理 网吧KTV停止营业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731268.md#1">北京大兴西红门一商场曾现疫情 当局遮掩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730176.md#1">【疫情2.3】纽约市卫生局长染疫</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730332.md#1">中共病毒沈阳一号病例死亡 官方未通报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729619.md#1">山东诸城化工废料致37人中毒 至少4死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729138.md#1">佳木斯大润发超市被封 市民：疑是官员甩锅</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732226.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732226.md#1">陆网红面霜在废弃公厕生产 汞超标7000倍</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12731829.md#1">三退声明精选（2021/02/03）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730987.md#1">黑龙江警察被前妻举报家暴诈骗 微博删文</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12726893.md#1">三退声明精选（2021/02/01）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12725341.md#1">广州温州去年出生率创新低 疫情影响成原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/31/n12723682.md#1">【疫情1.31】加州单日新增近1.9万个确诊</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1">四川女大学生学车后失踪遇害 疑遭奸杀</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12726354.md#1">研究：中共南海潜艇士兵21%有心理和精神问题</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12725278.md#1">大陆禁学生带手机上学 网酸：不如禁微信群</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/21/n12701693.md#1">美名校教授警告身处大陆学生勿选中国政治课</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/21/n12702057.md#1">宁波教师性侵13岁女生 校方发声明引批评</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/20/n12699629.md#1">腾讯QQ被曝自动读取用户浏览器历史记录</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732582.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/6a24e36ed3dc0e15b039bfd99c384592-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732582.md#1">京警以核酸检测当诱饵 访民杨浩被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732307.md#1">澳外长促中共允许联合国调查新疆人权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731556.md#1">据报新疆拘禁营女性遭性侵 美政府深感不安</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12728987.md#1">前情报官：中共或已窃取80%美国成年人个资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730986.md#1">武汉蝙蝠T恤再刺激中共神经 网友：哪里有卖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730318.md#1">河北律师卢廷阁举报石家庄市律协侮辱诽谤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732497.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1052438186-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732497.md#1">逾3300只个股下跌  A股三大股指齐跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732220.md#1">传蚂蚁集团就公司整改和中共当局达成协议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731569.md#1">被美调查 苹果代工厂立讯精密高管减持71亿元</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731419.md#1">中国科技股市值蒸发超3千亿 多只龙头股暴跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731301.md#1">大陆影视业2020业绩惨淡 万达预亏逾60亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730925.md#1">中共推迟公布2020年出生人口数据 引关注</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732370.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/3314-4-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732370.md#1">受贿三千万 内蒙巴彦淖尔前副市长武银星受审</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732460.md#1">外媒点名台湾拒用中共疫苗 陈时中：内容实在</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732093.md#1">拜登周四将发表讲话 为美外交政策定调</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12731876.md#1">台湾在南美设办公室 美助卿：助区域安全繁荣</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731372.md#1">分析：拜登对华核心团队 左右手意见不统一</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731358.md#1">腐败猖獗 中共多部门联合发“十个严禁”</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732652.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732652.md#1">沈阳延迟公布染疫者死讯 儿子公开信为母叫屈</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12731760.md#1">南昌安义县小区封闭管理 网吧KTV停止营业</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731268.md#1">北京大兴西红门一商场曾现疫情 当局遮掩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730176.md#1">【疫情2.3】纽约市卫生局长染疫</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730332.md#1">中共病毒沈阳一号病例死亡 官方未通报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729619.md#1">山东诸城化工废料致37人中毒 至少4死</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732226.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732226.md#1">陆网红面霜在废弃公厕生产 汞超标7000倍</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12731829.md#1">三退声明精选（2021/02/03）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730987.md#1">黑龙江警察被前妻举报家暴诈骗 微博删文</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12726893.md#1">三退声明精选（2021/02/01）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12725341.md#1">广州温州去年出生率创新低 疫情影响成原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/31/n12724209.md#1">李英爱迎来50岁生日 保养六法维持冻龄美貌</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1">四川女大学生学车后失踪遇害 疑遭奸杀</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12726354.md#1">研究：中共南海潜艇士兵21%有心理和精神问题</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12725278.md#1">大陆禁学生带手机上学 网酸：不如禁微信群</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/21/n12701693.md#1">美名校教授警告身处大陆学生勿选中国政治课</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/21/n12702057.md#1">宁波教师性侵13岁女生 校方发声明引批评</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/20/n12699629.md#1">腾讯QQ被曝自动读取用户浏览器历史记录</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/20/n12700072.md#1">【独家】中国东盟峰会 中共防嘉宾不利言论</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/21/n12703413.md#1">【独家】外事文件曝中共高层误判国际局势</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/19/n12696988.md#1">【内幕】压制舆论 桂林网信办抱怨人手不够</a><br>
